@@ -13,6 +13,11 @@ Changes in 0.61.10:
     source.  The same code is used in update code to unify updating from
     the repository and from changesets, and it is used to provide the search
     capabilities for the local database.
+  * Conary now allows all files, not just regular files, to have
+    dependencies.  This is necessary for user/group dependencies for
+    non-regular files to work.  Packages built with 0.61.10 or later
+    that have non-regular files with non-root user or group will not
+    be readable by Conary versions 0.61.9 or earlier.
 
 Changes in 0.61.9:
   * Fix a bug added in 0.61.8 that breaks tag handlers 
